fixes bug 329260 "Disk cache keeps emptying itself" r=biesi sr=bzbarsky